# antibody-commonness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: 01-MLM-score-SAbDab.ipynb  01-MLM-score-Thera-SAbDab.ipynb
src/antibody_commonness/: __init__.py  antibody_commonness.py  cli.py  pseudo_likelihood.py
src/antibody_commonness/data/: __init__.py  antibody_pll_dataset.py
src/antibody_commonness/utils/: __init__.py  common.py  pll_aggregator.py
tests/: test_antibody_commonness.py  test_antibody_pll_dataset.py  test_pseudo_likelihood.py  test_utils_common.py  test_utils_pll_aggregator.py
