[tool.poetry]
name = "antibody_commonness"
version = "0.1.0"
description = "A code repository for exploring ways to quantify antibody commonness"
authors = ["Marius Urbonas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
