[tool.poetry]
name = "antibody_commonness"
version = "0.1.0"
description = "A code repository for exploring ways to quantify antibody commonness"
authors = ["Marius Urbonas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
transformers = "^4.42.3"
torch = "^2.3.1"
matplotlib = "^3.9.0"
click = "^8.1.7"

sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
antibody-commonness = "antibody_commonness.cli:cli"